Register.php and css update
Stops the errors in register file
and displays fixed styling problems

--- a/style.css
+++ b/style.css
@@ -271,7 +271,7 @@ h4{
 
 }
 
-#register td, #register input{
+#register td:not(#errorMessage), #register input{
     text-align: left;
 }
 .wrap .container table th h2{
